[gd_scene load_steps=7 format=3 uid="uid://kj7ax1uhyktx"]

[ext_resource type="Script" path="res://GUI/main menu/main_menu.gd" id="1_n1ris"]
[ext_resource type="Theme" uid="uid://b1wf6ymwsms5p" path="res://GUI/main menu/main_menu_theme.tres" id="2_oo6j4"]

[sub_resource type="BoxMesh" id="BoxMesh_fjcap"]

[sub_resource type="Animation" id="Animation_o6iqm"]
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_m5k2n"]
resource_name = "ROV_spinning"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o636c"]
_data = {
"RESET": SubResource("Animation_o6iqm"),
"ROV_spinning": SubResource("Animation_m5k2n")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_n1ris")

[node name="Main Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -360.0
offset_right = 450.0
grow_vertical = 0

[node name="Play" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play
"

[node name="Customize" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Customize
"

[node name="Settings" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings
"

[node name="Exit" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit
"

[node name="Title" type="Label" parent="Main Menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("2_oo6j4")
theme_type_variation = &"HeaderLarge"
text = "TMUWAVESIM
Welcome!"
horizontal_alignment = 1

[node name="Version Text" type="Label" parent="Main Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Vers. 0.0.0.0"

[node name="SubViewportContainer" type="SubViewportContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.05441, 1.00186)

[node name="SubViewport" type="SubViewport" parent="Main Menu/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(510, 512)
size_2d_override = Vector2i(200, 200)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Main Menu/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.925844, 0.377905, 0, -0.377905, 0.925844, -0.036112, 0.834508, 1.86387)

[node name="SpotLight3D" type="SpotLight3D" parent="Main Menu/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 1.5, 1.5)

[node name="ROV_placeholder" type="Node3D" parent="Main Menu/SubViewportContainer/SubViewport"]

[node name="ROV_model" type="MeshInstance3D" parent="Main Menu/SubViewportContainer/SubViewport/ROV_placeholder"]
mesh = SubResource("BoxMesh_fjcap")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main Menu/SubViewportContainer/SubViewport/ROV_placeholder/ROV_model"]
libraries = {
"": SubResource("AnimationLibrary_o636c")
}

[connection signal="pressed" from="Main Menu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Customize" to="." method="_on_customize_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
